--- a/pages/10719.html
+++ b/pages/10719.html
@@ -398,7 +398,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#examples">Examples</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#examples">Examples</a></li><li><a href="#counterexamples">Counter-examples</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>If a <a class="existingWikiWord" href="/nlab/show/Bousfield+localization+of+spectra">Bousfield localization of spectra</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>L</mi> <mi>E</mi></msub></mrow><annotation encoding="application/x-tex">L_E</annotation></semantics></math> at a <a class="existingWikiWord" href="/nlab/show/spectrum">spectrum</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> preserves all <a class="existingWikiWord" href="/nlab/show/direct+sums">direct sums</a>, then it is given by <a class="existingWikiWord" href="/nlab/show/smash+product">smash product</a> with the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math>-localization of the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a></p>
@@ -442,6 +442,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id="counterexamples">Counter-examples</h2>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/p-completion">p-completion</a> is <em>not</em> smashing</li>
+</ul>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -466,6 +472,10 @@ margin-left: 0em;
 <li id="Bauer11">
 <p><a class="existingWikiWord" href="/nlab/show/Tilman+Bauer">Tilman Bauer</a>, <em>Bousfield localization and the Hasse square</em> (2011) (<a href="http://math.mit.edu/conferences/talbot/2007/tmfproc/Chapter09/bauer.pdf">pdf</a>)</p>
 </li>
+
+<li id="Nardin12">
+<p><a class="existingWikiWord" href="/nlab/show/Denis+Nardin">Denis Nardin</a>, section 3.2 of <em>Stability and distributivity over orbital ∞-categories</em>, 2012 (<a href="https://www.math.univ-paris13.fr/~nardin/thesis.pdf">pdf</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -473,14 +483,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 05:57:55.
+  Last revised on September 20, 2018 at 12:25:18.
   See the <a href="https://ncatlab.org/nlab/history/smashing localization" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/smashing+localization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/smashing+localization/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/smashing+localization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/smashing+localization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/smashing+localization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/smashing+localization/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/smashing+localization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/smashing+localization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/smashing localization/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
