--- a/pages/11518.html
+++ b/pages/11518.html
@@ -692,6 +692,10 @@ margin-left: 0em;
 <p><em>Permutative <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-categories in equivariant infinite loop space theory (<a href="http://arxiv.org/abs/1207.3459">arXiv:1207.3459</a>)</em></p>
 </li>
 
+<li id="Nardin12">
+<p><a class="existingWikiWord" href="/nlab/show/Denis+Nardin">Denis Nardin</a>, section 2.6 of <em>Stability and distributivity over orbital ∞-categories</em>, 2012 (<a href="https://www.math.univ-paris13.fr/~nardin/thesis.pdf">pdf</a>)</p>
+</li>
+
 <li id="Barwick14">
 <p><a class="existingWikiWord" href="/nlab/show/Clark+Barwick">Clark Barwick</a>, <em>Spectral Mackey functors and equivariant algebraic K-theory (I)</em>, Adv. Math., 304:646–727 (<a href="http://arxiv.org/abs/1404.0108">arXiv:1404.0108</a>)</p>
 </li>
@@ -722,14 +726,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 14, 2018 at 14:53:54.
+  Last revised on September 20, 2018 at 12:26:52.
   See the <a href="https://ncatlab.org/nlab/history/G-spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/G-spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/G-spectrum/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/G-spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/G-spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/G-spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/G-spectrum/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/G-spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/G-spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/G-spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
