--- a/pages/17551.html
+++ b/pages/17551.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -623,6 +623,17 @@ margin-left: 0em;
 <blockquote>
 <p>currently bare bones, using definitions and notation from <a href="#LewisMaySteinberger86">Lewis-May-Steinberger 86, II.9</a> without further ado</p>
 </blockquote>
+
+<p>Given a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> and a <a class="existingWikiWord" href="/nlab/show/normal+subgroup">normal subgroup</a>,</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ℱ</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">]</mo><mspace width="thickmathspace"></mspace><mo>≔</mo><mspace width="thickmathspace"></mspace><mo maxsize="1.2em" minsize="1.2em">{</mo><mi>N</mi><mo>⊂⃒</mo><mi>H</mi><mo>⊂</mo><mi>G</mi><mo maxsize="1.2em" minsize="1.2em">}</mo></mrow><annotation encoding="application/x-tex">
+  \mathcal{F}[N]
+  \;\coloneqq\;
+  \big\{
+    N \nsubset H \subset G 
+  \big\}
+
+</annotation></semantics></math></div>
+<p>denotes a family of <a class="existingWikiWord" href="/nlab/show/subgroups">subgroups</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> that do not contain <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math></p>
 
 <div class="num_prop" id="FPrimeLocalizationIsSmashingLocalization">
 <h6 id="proposition_3">Proposition</h6>
@@ -1027,7 +1038,7 @@ margin-left: 0em;
 <p id="Hmm"> given by…</p>
 
 <blockquote>
-<p>?? this clearly must be the case, but it still needs a formal argument ??</p>
+<p>this should follow formally like so: Prop. <a class="maruku-ref" href="#CanonicalComparisonMap"></a> says that the map is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℱ</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">]</mo><mo>′</mo></mrow><annotation encoding="application/x-tex">\mathcal{F}[N]'</annotation></semantics></math>-localization. But by <a href="LewisMaySteinberger86">LMS 86, bottom of p. 107</a>, this means that the map forgets everything that doesn’t appear at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math>-fixed points.</p>
 </blockquote>
 
 <p>…sending any <a class="existingWikiWord" href="/nlab/show/G-set">G-set</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>S</mi></mrow><annotation encoding="application/x-tex">S</annotation></semantics></math> to its <a class="existingWikiWord" href="/nlab/show/subset">subset</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mi>N</mi></msup></mrow><annotation encoding="application/x-tex">S^N</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+points">fixed points</a> regarded with its residual <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi></mrow><annotation encoding="application/x-tex">G/N</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/action">action</a>.</p>
@@ -1146,14 +1157,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 12:17:41.
+  Last revised on September 20, 2018 at 13:56:23.
   See the <a href="https://ncatlab.org/nlab/history/geometric fixed point spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/geometric+fixed+point+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+fixed+point+spectrum/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/geometric+fixed+point+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+fixed+point+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/geometric fixed point spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
