--- a/pages/8826.html
+++ b/pages/8826.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -321,7 +321,7 @@ margin-left: 0em;
 <p>“Multiagent systems are a new paradigm for understanding and building distributed systems, where it is assumed that the computational components are autonomous: able to control their own behaviour in the furtherance of their own goals.” (<a href="#Wooldridge09">Wooldridge09</a>)</p>
 </blockquote>
 
-<p>The area is a very wide one and this entry only deals with some generalities especially links between local `knowledge' and more global forms and the models of this that involve the use of &lt;a class='existingWikiWord' href='/nlab/show/modal+logic'&gt;modal logic&lt;/a&gt;.</p>
+<p>The area is a very wide one and this entry only deals with some generalities especially links between local `knowledge' and more global forms and the models of this that involve the use of various types of &lt;a class='existingWikiWord' href='/nlab/show/modal+logic'&gt;modal logic&lt;/a&gt;.</p>
 
 <h2 id="introduction">Introduction</h2>
 
@@ -404,14 +404,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 10:10:12.
+  Last revised on September 20, 2018 at 13:56:58.
   See the <a href="https://ncatlab.org/nlab/history/multiagent system" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/multiagent+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/multiagent+system/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/multiagent+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/multiagent+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/multiagent+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/multiagent+system/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/multiagent+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/multiagent+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/multiagent system/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
