--- a/pages/17551.html
+++ b/pages/17551.html
@@ -1038,7 +1038,7 @@ margin-left: 0em;
 <p id="Hmm"> given by…</p>
 
 <blockquote>
-<p>this should follow formally like so: Prop. <a class="maruku-ref" href="#CanonicalComparisonMap"></a> says that the map is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℱ</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">]</mo><mo>′</mo></mrow><annotation encoding="application/x-tex">\mathcal{F}[N]'</annotation></semantics></math>-localization. But by <a href="LewisMaySteinberger86">LMS 86, bottom of p. 107</a>, this means that the map forgets everything that doesn’t appear at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math>-fixed points.</p>
+<p>this should follow formally like so: Prop. <a class="maruku-ref" href="#CanonicalComparisonMap"></a> says that the map is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℱ</mi><mo stretchy="false">[</mo><mi>N</mi><mo stretchy="false">]</mo><mo>′</mo></mrow><annotation encoding="application/x-tex">\mathcal{F}[N]'</annotation></semantics></math>-localization. then use <a href="LewisMaySteinberger86">LMS 86, prop. 9.3</a></p>
 </blockquote>
 
 <p>…sending any <a class="existingWikiWord" href="/nlab/show/G-set">G-set</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>S</mi></mrow><annotation encoding="application/x-tex">S</annotation></semantics></math> to its <a class="existingWikiWord" href="/nlab/show/subset">subset</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mi>N</mi></msup></mrow><annotation encoding="application/x-tex">S^N</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/fixed+points">fixed points</a> regarded with its residual <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi><mo stretchy="false">/</mo><mi>N</mi></mrow><annotation encoding="application/x-tex">G/N</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/action">action</a>.</p>
@@ -1157,7 +1157,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 20, 2018 at 13:56:23.
+  Last revised on September 20, 2018 at 14:01:03.
   See the <a href="https://ncatlab.org/nlab/history/geometric fixed point spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
