--- a/pages/4226.html
+++ b/pages/4226.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9022/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9022/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -401,6 +401,7 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#history'>History</a></li>
+<li><a href='#history_2'>History</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#References'>References</a></li>
 </ul>
@@ -408,14 +409,24 @@ margin-left: 0em;
 
 <h2 id="history">History</h2>
 
-<p>Motivic integration has been introduced in the talk of <a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a> at Orsay in 1995. This talk also dealt with <a class="existingWikiWord" href="/nlab/show/orbifold+cohomology">orbifold cohomology</a> as well as 2 related papers of <span class="newWikiWord">Lev Borisov<a href="/nlab/new/Lev+Borisov">?</a></span>. The orbifold cohomology has been continued by Weimin Chen, <a class="existingWikiWord" href="/nlab/show/Yongbin+Ruan">Yongbin Ruan</a> and collaborators, and later also by algebraic geometers Abramovich, Vistoli, and others. From physical side a pioneer of both subjects is also Batyrev.</p>
+<p>What is called <em>motivic integration</em> is an upgrade of <a class="existingWikiWord" href="/nlab/show/p-adic+integration">p-adic integration</a> to a geometric integration theory obtained by replacing the <a class="existingWikiWord" href="/nlab/show/p-adic+integers">p-adic integers</a> by a <a class="existingWikiWord" href="/nlab/show/formal+power+series+ring">formal power series ring</a> over the <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a>.</p>
+
+<h2 id="history_2">History</h2>
+
+<p>Motivic integration has been introduced in the talk of <a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a> at Orsay in 1995. This talk also dealt with <a class="existingWikiWord" href="/nlab/show/orbifold+cohomology">orbifold cohomology</a> as well as 2 related papers of <a class="existingWikiWord" href="/nlab/show/Lev+Borisov">Lev Borisov</a>. The orbifold cohomology has been continued by Weimin Chen, <a class="existingWikiWord" href="/nlab/show/Yongbin+Ruan">Yongbin Ruan</a> and collaborators, and later also by algebraic geometers Abramovich, Vistoli, and others. From physical side a pioneer of both subjects is also Batyrev.</p>
 
 <p>Later, more general framework of motivic integration in model theory has been put forward by Denef and Loeser, partly based on Denef’s work on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-adic integration. More recent work using model theoretical approach is by Hrushovski and Kazhdan.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/p-adic+integration">p-adic integration</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/p-adic+integration">p-adic integration</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/motivic+cohomology">motivic cohomology</a></p>
+</li>
 </ul>
 
 <h2 id="References">References</h2>
@@ -423,7 +434,7 @@ margin-left: 0em;
 <p>A textbook account is in</p>
 
 <ul>
-<li>Antoine Chambert-Loir, Johannes Nicaise, JulienSebag, <em>Motivic integration</em>, Birkhaeuser 2018</li>
+<li id="CNS18">Antoine Chambert-Loir, Johannes Nicaise, Julien Sebag, <em>Motivic integration</em>, Progress in Mathematics 325 Birkhaeuser 2018 (<a href="https://doi.org/10.1007/978-1-4939-7887-8">doi:10.1007/978-1-4939-7887-8</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -521,7 +532,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 21, 2018 at 06:56:01.
+  Last revised on September 21, 2018 at 07:05:03.
   See the <a href="https://ncatlab.org/nlab/history/motivic integration" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
