--- a/pages/10135.html
+++ b/pages/10135.html
@@ -806,7 +806,18 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a><ul><li><a href="#InTermsOfStacks">In terms of stacks</a></li><li><a href="#InTermsOfSystemsOfFixedPointLoci">In terms of systems of fixed point loci</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<ul>
+<li><a href='#InTermsOfStacks'>In terms of stacks</a></li>
+<li><a href='#InTermsOfSystemsOfFixedPointLoci'>In terms of systems of fixed point loci</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>On general grounds, since <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒳</mi></mrow><annotation encoding="application/x-tex">\mathcal{X}</annotation></semantics></math> are special cases of <a class="existingWikiWord" href="/nlab/show/stacks">stacks</a> (<a class="existingWikiWord" href="/nlab/show/topological+stacks">topological stacks</a>, <a class="existingWikiWord" href="/nlab/show/differentiable+stacks">differentiable stacks</a>, …), there is an evident definition of <a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a> of (i.e. on) orbifolds, given by forming (<a class="existingWikiWord" href="/nlab/show/stable+homotopy+group">stable</a>) <a class="existingWikiWord" href="/nlab/show/homotopy+groups">homotopy groups</a> of <a class="existingWikiWord" href="/nlab/show/derived+hom-spaces">derived hom-spaces</a></p>
@@ -998,13 +1009,17 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id="references">References</h2>
+<p>History</p>
 
 <p>According to <a href="#Abramovich05">Abramovich 05, p. 42</a>:</p>
 
 <blockquote>
 <p>On December 7, 1995 <a class="existingWikiWord" href="/nlab/show/Maxim+Kontsevich">Maxim Kontsevich</a> delivered a history-making lecture at Orsay, titled <em>String Cohomology</em>. This is what is now know, after <a href="#ChenRuan00">Chen-Ruan 00</a>, as <em>orbifold cohomology</em>, Kontsevich’s lecture notes described the orbifold and <a class="existingWikiWord" href="/nlab/show/quantum+cohomology">quantum cohomology</a> of a global quotient <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a>. Twisted sectors, the age grading, and a version of orbifold stable maps for global quotients are all there.</p>
 </blockquote>
+
+<p>The same lecture also introduced <em><a class="existingWikiWord" href="/nlab/show/motivic+integration">motivic integration</a></em>.</p>
+
+<h2 id="references">References</h2>
 
 <p>Discussion of orbifold cohomology in the context of <a class="existingWikiWord" href="/nlab/show/Bredon+cohomology">Bredon</a>/<a class="existingWikiWord" href="/nlab/show/global+equivariant+homotopy+theory">global</a> <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a> includes</p>
 
@@ -1051,14 +1066,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 16, 2018 at 06:15:41.
+  Last revised on September 21, 2018 at 07:04:01.
   See the <a href="https://ncatlab.org/nlab/history/orbifold cohomology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold+cohomology/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/orbifold+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold+cohomology/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/orbifold+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold cohomology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
