--- a/pages/10471.html
+++ b/pages/10471.html
@@ -398,7 +398,27 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#Definition">Definition</a><ul><li><a href="#orthogonal_spectra">Orthogonal spectra</a></li><li><a href="#HomotopyGroups">Homotopy groups and Weak homotopy equivalences</a></li><li><a href="#SmashProduct">Smash product</a></li></ul></li><li><a href="#examples">Examples</a></li><li><a href="#properties">Properties</a><ul><li><a href="#relation_to_the_jhomomorphism">Relation to the J-homomorphism</a></li><li><a href="#relation_to_the_cobordism_hypothesis">Relation to the cobordism hypothesis</a></li><li><a href="#relation_to_global_equivariant_stable_homotopy_theory">Relation to global equivariant stable homotopy theory</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#Definition'>Definition</a></li>
+<ul>
+<li><a href='#orthogonal_spectra'>Orthogonal spectra</a></li>
+<li><a href='#HomotopyGroups'>Homotopy groups and Weak homotopy equivalences</a></li>
+<li><a href='#SmashProduct'>Smash product</a></li>
+</ul>
+<li><a href='#examples'>Examples</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#relation_to_the_jhomomorphism'>Relation to the J-homomorphism</a></li>
+<li><a href='#relation_to_the_cobordism_hypothesis'>Relation to the cobordism hypothesis</a></li>
+<li><a href='#relation_to_global_equivariant_stable_homotopy_theory'>Relation to global equivariant stable homotopy theory</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>Orthogonal spectra are one version of <a class="existingWikiWord" href="/nlab/show/highly+structured+spectra">highly structured spectra</a> that support a <a class="existingWikiWord" href="/nlab/show/symmetric+monoidal+smash+product+of+spectra">symmetric monoidal smash product of spectra</a>. An orthogonal spectrum is a sequence of <a class="existingWikiWord" href="/nlab/show/pointed+topological+spaces">pointed topological spaces</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">{</mo><msub><mi>X</mi> <mi>n</mi></msub><msub><mo stretchy="false">}</mo> <mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></msub></mrow><annotation encoding="application/x-tex">\{X_n\}_{n \in \mathbb{N}}</annotation></semantics></math> equipped with maps <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mi>n</mi></msub><mo>∧</mo><msup><mi>S</mi> <mn>1</mn></msup><mo>⟶</mo><msub><mi>X</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">X_n \wedge S^1 \longrightarrow X_{n+1}</annotation></semantics></math> from the <a class="existingWikiWord" href="/nlab/show/suspension">suspension</a> of one into the next, but such that the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>th <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> is equipped with an <a class="existingWikiWord" href="/nlab/show/action">action</a> of the <a class="existingWikiWord" href="/nlab/show/orthogonal+group">orthogonal group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>O</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">O(n)</annotation></semantics></math> and such that the induced structure maps. <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>X</mi> <mi>n</mi></msub><mo>∧</mo><msup><mi>S</mi> <mi>k</mi></msup><mo>⟶</mo><msub><mi>X</mi> <mrow><mi>n</mi><mo>+</mo><mi>k</mi></mrow></msub></mrow><annotation encoding="application/x-tex">X_n \wedge S^k \longrightarrow X_{n+k}</annotation></semantics></math> are all <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>O</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo><mo>×</mo><mi>O</mi><mo stretchy="false">(</mo><mi>k</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">O(n)\times O(k)</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariance">equivariant</a>, hence are <a class="existingWikiWord" href="/nlab/show/action">action</a> <a class="existingWikiWord" href="/nlab/show/homomorphisms">homomorphisms</a>. There is a natural <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a> of such orthogonal spectra and it is equivalent to the standard <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a> (<a href="#MMSS08">MMSS 98</a>).</p>
@@ -537,7 +557,7 @@ margin-left: 0em;
 <div class="num_defn" id="SmashProduct">
 <h6 id="definition_6">Definition</h6>
 
-<p>Given two orthogonal spectra <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>,</mo><mi>Y</mi><mo>∈</mo><mi>OrthSpectra</mi></mrow><annotation encoding="application/x-tex">X,Y\in OrthSpectra</annotation></semantics></math>, def. <a class="maruku-ref" href="#OrthogonalSpectrum"></a>, their <em><a class="existingWikiWord" href="/nlab/show/smash+product+of+spectra">smash product of spectra</a></em> is the orthongal spectrum</p>
+<p>Given two orthogonal spectra <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>,</mo><mi>Y</mi><mo>∈</mo><mi>OrthSpectra</mi></mrow><annotation encoding="application/x-tex">X,Y\in OrthSpectra</annotation></semantics></math>, def. <a class="maruku-ref" href="#OrthogonalSpectrum"></a>, their <em><a class="existingWikiWord" href="/nlab/show/smash+product+of+spectra">smash product of spectra</a></em> is the orthogonal spectrum</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>X</mi><mo>∧</mo><mi>Y</mi><mo>∈</mo><mi>OrthSpectrum</mi></mrow><annotation encoding="application/x-tex">
   X \wedge Y \in OrthSpectrum
 
@@ -794,14 +814,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 17, 2018 at 12:40:31.
+  Last revised on September 21, 2018 at 10:36:56.
   See the <a href="https://ncatlab.org/nlab/history/orthogonal spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orthogonal+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orthogonal+spectrum/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/orthogonal+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orthogonal+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orthogonal+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orthogonal+spectrum/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/orthogonal+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orthogonal+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orthogonal spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
