--- a/pages/17004.html
+++ b/pages/17004.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8970/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8970/#Item_11" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -884,10 +884,24 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#properties">Properties</a><ul><li><a href="#AsAlgebraicKTheoryOverTheFieldWithOneElement">As algebraic K-theory over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></a></li><li><a href="#kahnpriddy_theorem">Kahn-Priddy theorem</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#AsAlgebraicKTheoryOverTheFieldWithOneElement'>As algebraic K-theory over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></a></li>
+<li><a href='#kahnpriddy_theorem'>Kahn-Priddy theorem</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/generalized+cohomology+theory">generalized cohomology theory</a> which is <a class="existingWikiWord" href="/nlab/show/Brown+representability+theorem">represented</a> by the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a> is also called <em>stable cohomotopy</em>, as it is the <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a> version of <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a>.</p>
+
+<p>Equivalenty, it is the cohomolgical <a class="existingWikiWord" href="/nlab/show/duality">dual</a> concept to <a class="existingWikiWord" href="/nlab/show/stable+homotopy+homology+theory">stable homotopy homology theory</a>.</p>
 
 <h2 id="properties">Properties</h2>
 
@@ -1035,14 +1049,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 06:59:51.
+  Last revised on September 22, 2018 at 05:41:56.
   See the <a href="https://ncatlab.org/nlab/history/stable cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
