--- a/pages/8302.html
+++ b/pages/8302.html
@@ -821,8 +821,8 @@ margin-left: 0em;
 
 <p>The <a class="existingWikiWord" href="/nlab/show/Riemann-Hilbert+correspondence">Riemann-Hilbert correspondence</a>/<a class="existingWikiWord" href="/nlab/show/de+Rham+theorem">de Rham theorem</a> for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mi>A</mi></mrow><annotation encoding="application/x-tex">H A</annotation></semantics></math>-modules is established in</p>
 
-<ul id="BlockSmith09">
-<li><a class="existingWikiWord" href="/nlab/show/Jonathan+Block">Jonathan Block</a>, Aaron Smith, <em>A Riemann–Hilbert correspondence for infinity local systems</em> (<a href="http://arxiv.org/abs/0908.2843">arXiv:0908.2843</a>)</li>
+<ul>
+<li id="BlockSmith09"><a class="existingWikiWord" href="/nlab/show/Jonathan+Block">Jonathan Block</a>, Aaron Smith, <em>A Riemann–Hilbert correspondence for infinity local systems</em> (<a href="http://arxiv.org/abs/0908.2843">arXiv:0908.2843</a>)</li>
 </ul>
 </body></html>
 
@@ -830,7 +830,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 05:52:03.
+  Last revised on September 22, 2018 at 06:00:48.
   See the <a href="https://ncatlab.org/nlab/history/ordinary homology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
