--- a/pages/17004.html
+++ b/pages/17004.html
@@ -959,7 +959,13 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Boardman+homomorphism">Boardman homomorphism</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -1049,14 +1055,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 05:41:56.
+  Last revised on September 22, 2018 at 06:17:52.
   See the <a href="https://ncatlab.org/nlab/history/stable cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
