--- a/pages/4226.html
+++ b/pages/4226.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9022/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9022/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -409,7 +409,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>What is called <em>motivic integration</em> is an upgrade of <a class="existingWikiWord" href="/nlab/show/p-adic+integration">p-adic integration</a> to a geometric integration theory obtained by replacing the <a class="existingWikiWord" href="/nlab/show/p-adic+integers">p-adic integers</a> by a <a class="existingWikiWord" href="/nlab/show/formal+power+series+ring">formal power series ring</a> over the <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a>.</p>
+<p>What is called <em>motivic integration</em> is an upgrade of <a class="existingWikiWord" href="/nlab/show/p-adic+integration">p-adic integration</a> to a geometric integration theory obtained by replacing the <a class="existingWikiWord" href="/nlab/show/p-adic+integers">p-adic integers</a> by a <a class="existingWikiWord" href="/nlab/show/formal+power+series+ring">formal power series ring</a> over the <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a>, and more generally by <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo stretchy="false">(</mo><mo stretchy="false">(</mo><mi>t</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">k((t))</annotation></semantics></math>, for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi></mrow><annotation encoding="application/x-tex">k</annotation></semantics></math> a field of characteristic <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>0</mn></mrow><annotation encoding="application/x-tex">0</annotation></semantics></math>.</p>
 
 <h2 id="history">History</h2>
 
@@ -536,14 +536,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 04:20:29.
+  Last revised on September 22, 2018 at 06:48:29.
   See the <a href="https://ncatlab.org/nlab/history/motivic integration" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/motivic+integration" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/motivic+integration/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/motivic+integration" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/motivic+integration" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/motivic+integration" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/motivic+integration/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/motivic+integration" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/motivic+integration" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/motivic integration/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
