--- a/pages/6713.html
+++ b/pages/6713.html
@@ -1019,9 +1019,13 @@ margin-left: 0em;
 
 <p>See also at <em><a class="existingWikiWord" href="/nlab/show/anti-D-brane">anti-D-brane</a></em>.</p>
 
-<p>Review of the physical picture includes</p>
+<p>Further review and discussion of D-brane charge in K-theory includes the following</p>
 
 <ul>
+<li id="OlsenSzabo00">
+<p>Kasper Olsen, <a class="existingWikiWord" href="/nlab/show/Richard+Szabo">Richard Szabo</a>, <em>Brane Descent Relations in K-theory</em>, Nucl.Phys. B566 (2000) 562-598 (<a href="https://arxiv.org/abs/hep-th/9904153">arXiv:hep-th/9904153</a>)</p>
+</li>
+
 <li>
 <p>Kasper Olsen, <a class="existingWikiWord" href="/nlab/show/Richard+Szabo">Richard Szabo</a>, <em>Constructing D-Branes from K-Theory</em>, Adv.Theor.Math.Phys. 3 (1999) 889-1025 (<a href="https://arxiv.org/abs/hep-th/9907140">arXiv:hep-th/9907140</a>)</p>
 </li>
@@ -1204,14 +1208,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 21, 2018 at 14:50:21.
+  Last revised on September 22, 2018 at 08:44:31.
   See the <a href="https://ncatlab.org/nlab/history/D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/55" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(55 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/56" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(56 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
