--- a/pages/19700.html
+++ b/pages/19700.html
@@ -678,7 +678,13 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#statement">Statement</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#statement'>Statement</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="statement">Statement</h2>
 
 <div class="num_prop" id="MatricesOverPrincipalIdealDomainsHaveSmithNormalForm">
@@ -711,6 +717,10 @@ margin-left: 0em;
 <li>
 <p>Sam Evans, <em>Smith normal form over the integers</em> (<a href="https://www3.nd.edu/~sevens/smithform.pdf">pdf</a>)</p>
 </li>
+
+<li>
+<p>Bill Casselman, <em>Hermite and Smith forms</em>, 2011 (<a href="http://www.math.ubc.ca/~cass/siegel/Smith.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -724,14 +734,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on September 19, 2018 at 05:15:02.
+  Last revised on September 22, 2018 at 13:15:08.
   See the <a href="https://ncatlab.org/nlab/history/Smith normal form" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Smith+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Smith+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Smith+normal+form/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Smith+normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Smith+normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Smith normal form/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
