--- a/pages/19700.html
+++ b/pages/19700.html
@@ -681,6 +681,7 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#statement'>Statement</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
@@ -704,6 +705,12 @@ margin-left: 0em;
 </center>
 <p>such that, moreover, each <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>a</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">a_i</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/divisor">divides</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>a</mi> <mrow><mi>i</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">a_{i+1}</annotation></semantics></math>.</p>
 </div>
+
+<h2 id="related_concepts">Related concepts</h2>
+
+<ul>
+<li><span class="newWikiWord">Hermite normal form<a href="/nlab/new/Hermite+normal+form">?</a></span></li>
+</ul>
 
 <h2 id="references">References</h2>
 
@@ -734,14 +741,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 22, 2018 at 13:15:08.
+  Last revised on September 23, 2018 at 04:43:19.
   See the <a href="https://ncatlab.org/nlab/history/Smith normal form" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Smith+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Smith+normal+form/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Smith+normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Smith+normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Smith+normal+form" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Smith+normal+form/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Smith+normal+form" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Smith+normal+form" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Smith normal form/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
